# research-agent

./: .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
src/research_agent/: __init__.py  container.py  interfaces.py
src/research_agent/citation/: __init__.py  extractor.py
src/research_agent/ingestion/: __init__.py  ingester.py
src/research_agent/report/: __init__.py  generator.py
src/research_agent/retrieval/: __init__.py  retriever.py
src/research_agent/summarization/: __init__.py  summarizer.py
tests/: conftest.py  test_container.py  test_interfaces.py  test_placeholders.py
